# tralc

./: .gitignore  CMakeLists.txt  README.md  build_gkt3.sh  config.h.in  dub.json
source/: app.d
source/ui/: main.css  main.glade  main.glade~  test.glade
src/: main.c  test.c  test2.c
